--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "lint:es": "eslint packages/**/*.{js,jsx,ts,tsx}",
     "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"(packages|apps)/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md)\"",
     "prepare": "husky",
-    "lint:style": "stylelint \"(packages|apps)/**/*.{css,less,scss}\""
+    "lint:style": "stylelint \"(packages|apps)/**/*.{css,less,scss}\"",
+    "lint": "pnpm run lint:es && pnpm run lint:style",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+        "path": "node_modules/cz-git"
+    }
   },
   "keywords": [],
   "author": "星语恋心",
@@ -22,10 +29,16 @@
 
     "stylelint": "16.12.0",
     
-    "husky": "9.1.7",
-    "commitlint": "19.6.1",
-    "cz-git": "1.11.0",
-    "commitizen": "4.3.1",
+
+
+
+
+
+    "husky": "9.0.11",
+    "commitlint": "19.3.0",
+    "cz-git": "1.9.3",
+    "commitizen": "4.3.0",
+    "@commitlint/config-conventional": "19.2.2",
     "lint-staged":"15.3.0"
   }
 }
