--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "星语恋心 UI库",
   "main": "index.js",
   "scripts": {
+    "dev:docs": "pnpm --filter @love/docs dev",
+    "dev:ui": "pnpm --filter @love/ui dev",
+    "dev": "pnpm dev:ui && pnpm dev:docs",
     "lint:es": "eslint packages/**/*.{js,jsx,ts,tsx}",
     "spellcheck": "cspell lint --dot --gitignore --color --cache --show-suggestions \"(packages|apps)/**/*.@(html|js|cjs|mjs|ts|tsx|css|scss|md)\"",
     "prepare": "husky",
