--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,13 +3,19 @@
   "version": "0.0.1",
   "description": "星语恋心 UI组件库",
   "main": "index.js",
-  "module": "src/index.ts",
-  "types": "src/index.ts",
+  "module": "es/index.mjs",
+  "types": "es/index.d.mts",
   "scripts": {
+    "dev": "tsup --watch",
+    "build": "tsup"
   },
   "author": "星语",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^19.0.5"
+    "@types/react": "^19.0.5",
+    "tsup": "^8.3.5"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1"
   }
 }
