--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,21 @@
 {
     "compilerOptions": {
-        "jsx": "react-jsx",// 允许使用jsx语法
-        "esModuleInterop": true,// 允许使用默认导出
-        "paths": {
-            "@love/ui":["./packages/ui/src"]
-        }
-    }
-}
+        "target": "ES2015",//指定ECMAScript目标版本
+        "lib": ["DOM", "ESNext"],//指定要包含在编译中的库文件
+        "allowJs": true,//允许编译JavaScript文件
+        "module": "commonjs",// 指定模块代码生成
+        "esModuleInterop": true,// 启用从ES模块导入时的默认行为 允许从CommonJS模块导入默认导出 启用CommonJS和ES模块之间的互操作性 
+        "forceConsistentCasingInFileNames": true,// 确保在不同的文件系统中具有相同的文件名称时，文件名称的大小写是否一致
+        "declaration": true,// 生成相应的'.d.ts'文件
+        "jsx": "react-jsx",// 指定JSX代码的生成
+        "resolveJsonModule": true,// 允许导入'.json'文件
+        "skipLibCheck": true,// 跳过对声明文件的类型检查
+        "strict": true,// 启用所有严格类型检查选项
+        "experimentalDecorators": true,// 启用实验性的装饰器支持
+        "moduleResolution": "node",// 指定模块解析策略
+    },
+    "$schema": "https://json.schemastore.org/tsconfig",// 指定tsconfig.json文件的JSON Schema版本
+    "display": "Base",// 显示名称
+    "include": ["packages/**/*"]// 要包含的文件或文件夹的列表
+  }
+  
