--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,7 +4,7 @@
   "description": "星语恋心 UI组件库",
   "main": "index.js",
   "module": "es/index.mjs",
-  "types": "es/index.d.mts",
+  "types": "es/index.mts",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup"
